# dotenv-cpp

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  conanfile_legacy.py  run_benchmarks.sh  test_edge_cases.env
.github/: copilot-instructions.md
benchmarks/: CMakeLists.txt  bench_auto_detection.cpp  bench_file_operations.cpp  bench_main.cpp  bench_optimized.cpp  bench_simd.cpp  bench_thread_safety.cpp
cmake/: dotenvConfig.cmake.in  dotenvConfigVersion.cmake.in
examples/: CMakeLists.txt  cpp23_expected.cpp  cpp_error_handling.cpp
examples/basic_usage/: CMakeLists.txt  README.md  example.env  main.cpp
examples/cmake_integration/: CMakeLists.txt  config.env  main.cpp
examples/conan_usage/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
examples/modern_cpp20/: CMakeLists.txt  config.env  main.cpp  production.env
examples/modern_cpp23/: CMakeLists.txt  app.env  fallback.env  main.cpp
include/: dotenv.h  dotenv.hpp  dotenv_mmap.hpp  dotenv_simd.hpp
src/: dotenv.cpp  dotenv_mmap.cpp  dotenv_simd.cpp  main.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test.cpp  test.env  test_expected.cpp  test_expected_advanced.cpp  test_modern_api.cpp  test_process_env.cpp  test_simd.cpp
